clang/test/BSC/Negative/Trait/trait_redefinition/trait-redefinition-template-then-non-template.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// Template trait followed by a non-template trait with the same name.

_Trait a<b>{}; // expected-note {{previous definition is here}}
_Trait a{}; // expected-error {{redefinition of 'a'}}
